Fixed #9602 - Not all the selected items are visible in an autocomplete with multiple="true"

--- a/src/app/components/autocomplete/autocomplete.css
+++ b/src/app/components/autocomplete/autocomplete.css
@@ -52,7 +52,7 @@
     padding: 0;
     list-style-type: none;
     cursor: text;
-    overflow: hidden;
+    overflow: auto;
     display: flex;
     align-items: center;
 }
